--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-            prefWidth="1080.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Client.view.LobbyMenuGui">
+            prefWidth="1080.0" style="-fx-background-color: #515194;" xmlns="http://javafx.com/javafx/16"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
     <left>
-        <AnchorPane prefHeight="423.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="720.0" prefWidth="278.0" BorderPane.alignment="CENTER">
             <children>
-                <Button layoutX="30.0" layoutY="374.0" mnemonicParsing="false" onAction="#play1RoundGame"
+                <Button layoutX="24.0" layoutY="229.0" mnemonicParsing="false" onAction="#play1RoundGame"
                         text="1 round"/>
+                <TextField layoutX="26.0" layoutY="72.0"/>
+                <Label layoutX="14.0" layoutY="47.0" prefHeight="18.0" prefWidth="246.0"
+                       text="please write your opponent user name to play"/>
+                <Button layoutX="150.0" layoutY="229.0" mnemonicParsing="false" text="3 round"/>
             </children>
         </AnchorPane>
     </left>
