--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -17,7 +17,8 @@
                 <TextField layoutX="26.0" layoutY="72.0"/>
                 <Label layoutX="14.0" layoutY="47.0" prefHeight="18.0" prefWidth="246.0"
                        text="please write your opponent user name to play"/>
-                <Button layoutX="150.0" layoutY="229.0" mnemonicParsing="false" text="3 round"/>
+                <Button layoutX="150.0" layoutY="229.0" mnemonicParsing="false" onAction="#play3RoundGame"
+                        text="3 round"/>
             </children>
         </AnchorPane>
     </left>
