--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0"
-            prefWidth="1080.0" style="-fx-background-color: #515194;" xmlns="http://javafx.com/javafx/16"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
-    <left>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #515194;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
+    <right>
         <AnchorPane prefHeight="720.0" prefWidth="278.0" BorderPane.alignment="CENTER">
             <children>
-                <Button layoutX="24.0" layoutY="229.0" mnemonicParsing="false" onAction="#play1RoundGame"
-                        text="1 round"/>
-                <TextField layoutX="26.0" layoutY="72.0"/>
-                <Label layoutX="14.0" layoutY="47.0" prefHeight="18.0" prefWidth="246.0"
-                       text="please write your opponent user name to play"/>
-                <Button layoutX="150.0" layoutY="229.0" mnemonicParsing="false" onAction="#play3RoundGame"
-                        text="3 round"/>
+                <Button layoutX="24.0" layoutY="229.0" mnemonicParsing="false" onAction="#play1RoundGame" text="1 round" />
+                <TextField layoutX="26.0" layoutY="72.0" />
+                <Label layoutX="14.0" layoutY="47.0" prefHeight="18.0" prefWidth="246.0" text="please write your opponent user name to play" />
+                <Button layoutX="150.0" layoutY="229.0" mnemonicParsing="false" onAction="#play3RoundGame" text="3 round" />
+            <Label layoutX="33.0" layoutY="343.0" text="please choose rounds for random game" />
+            <Button layoutX="27.0" layoutY="398.0" mnemonicParsing="false" text="1 round - random" />
+            <Button layoutX="156.0" layoutY="398.0" mnemonicParsing="false" text="2 round-random" />
             </children>
         </AnchorPane>
-    </left>
+    </right>
+    <top>
+
+        <HBox maxHeight="35.0" prefHeight="100.0" prefWidth="200.0" spacing="23.0" BorderPane.alignment="CENTER_RIGHT">
+            <children>
+                <TextArea maxHeight="35.0" minHeight="35.0" prefHeight="35.0" prefWidth="660.0" promptText="message" fx:id="textArea">
+               <font>
+                  <Font name="Arial" size="12.0" />
+               </font></TextArea>
+                <Button mnemonicParsing="false" prefHeight="35.0" text="send" onMouseClicked="#sendMessage"/>
+            <Button mnemonicParsing="false" prefHeight="35.0" text="refresh" onMouseClicked="#refreshMessages"/>
+            </children>
+        </HBox>
+    </top>
+   <center>
+      <ScrollPane prefHeight="691.0" prefWidth="801.0" style="-fx-background: #06eed3;" BorderPane.alignment="CENTER">
+        <content>
+          <GridPane fx:id="messagesGridPane" vgap="5.0"/>
+        </content>
+      </ScrollPane>
+   </center>
+
 </BorderPane>
