--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -1,40 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #515194;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
     <right>
-        <AnchorPane prefHeight="720.0" prefWidth="278.0" BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="720.0" prefWidth="278.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
             <children>
-                <Button layoutX="24.0" layoutY="229.0" mnemonicParsing="false" onAction="#play1RoundGame" text="1 round" />
-                <TextField layoutX="26.0" layoutY="72.0" />
-                <Label layoutX="14.0" layoutY="47.0" prefHeight="18.0" prefWidth="246.0" text="please write your opponent user name to play" />
-                <Button layoutX="150.0" layoutY="229.0" mnemonicParsing="false" onAction="#play3RoundGame" text="3 round" />
-            <Label layoutX="33.0" layoutY="343.0" text="please choose rounds for random game" />
-            <Button layoutX="27.0" layoutY="398.0" mnemonicParsing="false" text="1 round - random" />
-            <Button layoutX="156.0" layoutY="398.0" mnemonicParsing="false" text="2 round-random" />
+                <Button layoutX="71.0" layoutY="188.0" mnemonicParsing="false" onAction="#play1RoundGame" style="-fx-background-color: red;" text="1 round" textFill="WHITE" />
+                <TextField layoutX="63.0" layoutY="88.0" />
+                <Label layoutX="16.0" layoutY="53.0" prefHeight="18.0" prefWidth="246.0" text="please write your opponent user name to play" textFill="WHITE" />
+                <Button layoutX="156.0" layoutY="188.0" mnemonicParsing="false" onAction="#play3RoundGame" style="-fx-background-color: red;" text="3 round" textFill="WHITE" />
+            <Label layoutX="33.0" layoutY="343.0" text="please choose rounds for random game" textFill="WHITE" />
+            <Button layoutX="27.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;" text="1 round - random" textFill="WHITE" />
+            <Button layoutX="156.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;" text="2 round-random" textFill="WHITE" />
+            <Button layoutX="100.0" layoutY="599.0" mnemonicParsing="false" onMouseClicked="#backToMainMenu" prefWidth="100.0" text="back" />
+            <Line endX="142.0" layoutX="138.0" layoutY="296.0" startX="-132.0" />
             </children>
         </AnchorPane>
     </right>
     <top>
 
-        <HBox maxHeight="35.0" prefHeight="100.0" prefWidth="200.0" spacing="23.0" BorderPane.alignment="CENTER_RIGHT">
+        <HBox maxHeight="35.0" prefHeight="100.0" prefWidth="200.0" spacing="23.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER_RIGHT">
             <children>
-                <TextArea maxHeight="35.0" minHeight="35.0" prefHeight="35.0" prefWidth="660.0" promptText="message" fx:id="textArea">
+                <TextArea fx:id="textArea" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" prefWidth="660.0" promptText="message">
                <font>
                   <Font name="Arial" size="12.0" />
                </font></TextArea>
-                <Button mnemonicParsing="false" prefHeight="35.0" text="send" onMouseClicked="#sendMessage"/>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="refresh" onMouseClicked="#refreshMessages"/>
+                <Button mnemonicParsing="false" onMouseClicked="#sendMessage" prefHeight="35.0" style="-fx-background-color: blue;">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@chatButtonImages/send.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" onMouseClicked="#refreshMessages" prefHeight="35.0" style="-fx-background-color: purple;">
+               <graphic>
+                  <ImageView fitHeight="28.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@chatButtonImages/refresh.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" onMouseClicked="#showPinnedMessages" prefHeight="36.0" prefWidth="139.0" style="-fx-background-color: orange;" text="show pinned messages" textFill="#5900ff" />
             </children>
         </HBox>
     </top>
    <center>
-      <ScrollPane prefHeight="691.0" prefWidth="801.0" style="-fx-background: #06eed3;" BorderPane.alignment="CENTER">
+      <ScrollPane prefHeight="691.0" prefWidth="801.0" style="-fx-background: black;" BorderPane.alignment="CENTER">
         <content>
-          <GridPane fx:id="messagesGridPane" vgap="5.0"/>
+            <GridPane fx:id="messagesGridPane" vgap="5.0" />
         </content>
       </ScrollPane>
    </center>
