--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -10,12 +10,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
-    <right>
+    <left>
         <AnchorPane prefHeight="720.0" prefWidth="278.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
             <children>
                 <Button layoutX="71.0" layoutY="188.0" mnemonicParsing="false" onAction="#play1RoundGame" style="-fx-background-color: red;" text="1 round" textFill="WHITE" />
@@ -26,44 +25,49 @@
             <Button layoutX="27.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;" text="1 round - random" textFill="WHITE" />
             <Button layoutX="156.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;" text="2 round-random" textFill="WHITE" />
             <Button layoutX="100.0" layoutY="599.0" mnemonicParsing="false" onMouseClicked="#backToMainMenu" prefWidth="100.0" text="back" />
-            <Line endX="142.0" layoutX="138.0" layoutY="296.0" startX="-132.0" />
+            <Line endX="142.0" layoutX="138.0" layoutY="296.0" startX="-138.0" />
             </children>
         </AnchorPane>
-    </right>
-    <top>
+    </left>
 
-        <HBox maxHeight="35.0" prefHeight="100.0" prefWidth="200.0" spacing="23.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER_RIGHT">
-            <children>
-                <TextArea fx:id="textArea" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" prefWidth="660.0" promptText="message">
-               <font>
-                  <Font name="Arial" size="12.0" />
-               </font></TextArea>
-                <Button mnemonicParsing="false" onMouseClicked="#sendMessage" prefHeight="35.0" style="-fx-background-color: blue;">
-               <graphic>
-                  <ImageView fitHeight="26.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@chatButtonImages/send.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <Button mnemonicParsing="false" onMouseClicked="#refreshMessages" prefHeight="35.0" style="-fx-background-color: purple;">
-               <graphic>
-                  <ImageView fitHeight="28.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@chatButtonImages/refresh.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <Button mnemonicParsing="false" onMouseClicked="#showPinnedMessages" prefHeight="36.0" prefWidth="139.0" style="-fx-background-color: orange;" text="show pinned messages" textFill="#5900ff" />
-            </children>
-        </HBox>
-    </top>
    <center>
-      <ScrollPane prefHeight="691.0" prefWidth="801.0" style="-fx-background: black;" BorderPane.alignment="CENTER">
+      <ScrollPane prefHeight="691.0" prefWidth="801.0" style="-fx-background: black; -fx-background-color: black;" BorderPane.alignment="CENTER">
         <content>
             <GridPane fx:id="messagesGridPane" vgap="5.0" />
         </content>
       </ScrollPane>
    </center>
+
+    <bottom>
+        <AnchorPane prefHeight="40.0" prefWidth="1080.0" style="-fx-background-color: black;">
+            <children>
+
+
+                <TextArea fx:id="textArea" layoutX="118.0" layoutY="4.0" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" prefWidth="660.0" promptText="message">
+                    <font>
+                        <Font name="Arial" size="12.0" />
+                    </font></TextArea>
+                <Button layoutX="792.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#sendMessage" prefHeight="35.0" prefWidth="24.0" style="-fx-background-color: blue;">
+               <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@chatButtonImages/send.png" />
+                            </image>
+                        </ImageView>
+               </graphic></Button>
+                <Button layoutX="853.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#refreshMessages" prefHeight="35.0" style="-fx-background-color: purple;">
+               <graphic>
+                        <ImageView fitHeight="28.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@chatButtonImages/refresh.png" />
+                            </image>
+                        </ImageView>
+               </graphic></Button>
+                <Button layoutX="911.0" mnemonicParsing="false" onMouseClicked="#showPinnedMessages" prefHeight="45.0" prefWidth="139.0" style="-fx-background-color: orange;" text="show pinned messages" textFill="#5900ff" />
+            
+
+            </children>
+        </AnchorPane>
+    </bottom>
 
 </BorderPane>
