--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -10,10 +10,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.LobbyMenuGui">
+
+    <top>
+        <HBox alignment="CENTER" prefHeight="38.0" prefWidth="1080.0" style="-fx-background-color: black;">
+            <Text fill="WHITE" text="number of online users: " fx:id="onlineUsersText">
+            <font>
+               <Font name="Arial" size="14.0" />
+            </font></Text>
+        </HBox>
+    </top>
     <left>
         <AnchorPane prefHeight="720.0" prefWidth="278.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
             <children>
@@ -24,7 +35,7 @@
             <Label layoutX="33.0" layoutY="343.0" text="please choose rounds for random game" textFill="WHITE" />
             <Button layoutX="27.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;" text="1 round - random" textFill="WHITE" />
             <Button layoutX="156.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;" text="2 round-random" textFill="WHITE" />
-            <Button layoutX="100.0" layoutY="599.0" mnemonicParsing="false" onMouseClicked="#backToMainMenu" prefWidth="100.0" text="back" />
+            <Button layoutX="91.0" layoutY="552.0" mnemonicParsing="false" onMouseClicked="#backToMainMenu" prefWidth="100.0" text="back" />
             <Line endX="142.0" layoutX="138.0" layoutY="296.0" startX="-138.0" />
             </children>
         </AnchorPane>
