--- a/src/main/resources/Client/view/ScoreBoardMenu.fxml
+++ b/src/main/resources/Client/view/ScoreBoardMenu.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.*?>
 
 
-<BorderPane fx:id="borderpane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
+<BorderPane fx:id="orderpane" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.1"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.ScoreBoardMenuGui">
     <bottom>
         <VBox alignment="CENTER" prefHeight="66.0" prefWidth="1080.0" BorderPane.alignment="CENTER" style="-fx-background-color: black">
@@ -21,7 +21,7 @@
         </VBox>
     </bottom>
     <center>
-        <GridPane fx:id="scoreboard" style="-fx-background-color: black"/>
+        <GridPane fx:id="coreboard" style="-fx-background-color: black"/>
     </center>
     <top>
         <VBox alignment="CENTER" prefHeight="77.0" prefWidth="1080.0" BorderPane.alignment="CENTER" style="-fx-background-color: black">
