--- a/src/main/resources/Client/view/MatchMakingMenuGui.fxml
+++ b/src/main/resources/Client/view/MatchMakingMenuGui.fxml
@@ -9,10 +9,15 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.geometry.Insets?>
+<?import java.net.URL?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="Client.view.MatchMakingMenuGui"
             prefHeight="400.0" prefWidth="600.0">
+
+    <stylesheets>
+        <URL value="@styles/LoginMenuGui.css"/>
+    </stylesheets>
 
     <center>
         <HBox alignment="CENTER">
