--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -81,7 +81,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button layoutX="853.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#refreshMessages"
+                <Button layoutX="853.0" layoutY="4.0" mnemonicParsing="false" onMouseClicked="#updateMessages"
                         prefHeight="35.0" style="-fx-background-color: purple;">
                     <graphic>
                         <ImageView fitHeight="28.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
