--- a/src/main/resources/Client/view/ShopMenuGui.fxml
+++ b/src/main/resources/Client/view/ShopMenuGui.fxml
@@ -7,7 +7,7 @@
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.view.ShopMenuGui">
 
 
-    <GridPane fx:id="gridPane" alignment="CENTER" hgap="10.0" vgap="5.0" />
+    <GridPane fx:id="ridPane" alignment="CENTER" hgap="10.0" vgap="5.0" />
 
 
 
