--- a/src/main/resources/Client/view/LobbyMenuGui.fxml
+++ b/src/main/resources/Client/view/LobbyMenuGui.fxml
@@ -32,12 +32,12 @@
         <AnchorPane prefHeight="720.0" prefWidth="278.0" style="-fx-background-color: grey;"
                     BorderPane.alignment="CENTER">
             <children>
-                <Button layoutX="71.0" layoutY="188.0" mnemonicParsing="false" onAction="#play1RoundGame"
+                <Button layoutX="71.0" layoutY="188.0" mnemonicParsing="false" onAction="#play1RoundGameWithAnotherUser"
                         style="-fx-background-color: red;" text="1 round" textFill="WHITE"/>
-                <TextField layoutX="63.0" layoutY="88.0"/>
+                <TextField layoutX="63.0" layoutY="88.0" fx:id="userNameText"/>
                 <Label layoutX="16.0" layoutY="53.0" prefHeight="18.0" prefWidth="246.0"
                        text="please write your opponent user name to play" textFill="WHITE"/>
-                <Button layoutX="156.0" layoutY="188.0" mnemonicParsing="false" onAction="#play3RoundGame"
+                <Button layoutX="156.0" layoutY="188.0" mnemonicParsing="false" onAction="#play3RoundGameWithAnotherUser"
                         style="-fx-background-color: red;" text="3 round" textFill="WHITE"/>
                 <Label layoutX="33.0" layoutY="343.0" text="please choose rounds for random game" textFill="WHITE"/>
                 <Button layoutX="27.0" layoutY="398.0" mnemonicParsing="false" style="-fx-background-color: red;"
